workplace init demo

--- a/src/global.less
+++ b/src/global.less
@@ -52,3 +52,31 @@ ol {
     min-height: 100vh;
   }
 }
+
+
+/* 自定义颜色主题 #3644a0 */
+.ant-menu.ant-menu-dark, .ant-menu-dark .ant-menu-sub {
+  background: #3644a0;
+}
+.ant-pro-sider-menu-logo {
+  background: #3644a0;
+  border-bottom: 1px solid #96a7f85e;
+}
+.ant-layout-sider {
+  background: #3644a0;
+}
+.ant-menu-dark .ant-menu-inline.ant-menu-sub {
+  background: #3644a0;
+}
+.ant-menu-dark .ant-menu-item, .ant-menu-dark .ant-menu-item-group-title, .ant-menu-dark .ant-menu-item > a {
+  color: #9cadfd;
+  font-size: 16px;
+}
+.ant-menu-dark .ant-menu-item-selected .anticon + span {
+  color: #ffffff;
+  font-weight: 800;
+  font-size: 16px;
+}
+.ant-pro-sider-menu-logo h1 {
+  color: #96a7f8;
+}
